--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+* ::-webkit-scrollbar{
+  display: none;
+}
 vm-player {
   --vm-control-scale: 1.75;
 }
